--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="console">
             <h4>CONSOLE</h4>
-            <iframe src=""></iframe>
+            <div id="console"></div>
         </div>
     </main>
     <footer>
