file input feature

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="buttons">
                     <button class="submit">submit</button>
-                    <button class="addFile">add file</button>
+                    <input type="file" id="fileInput" accept=".html">
                 </div>
             </div>
             <div class="preview">
