--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="panel">
             <div class="codeSection">
-                <h5>CODE</h5>
+                <h5 id="codeLogo">CODE</h5>
                 <div class="code">
                     <div id="line"></div>
                     <textarea id="code"></textarea>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="console">
-            <h4>CONSOLE</h4>
+            <h4 id="consoleLogo">CONSOLE</h4>
             <div id="console"></div>
         </div>
     </main>
