--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="preview">
-                <h5>PREVIEW</h5>
+                <h5 id="previewLogo">PREVIEW</h5>
                 <iframe
   id="preview"
   src="preview.html"
