--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <header>
         <div class="logo">CODE EDITOR</div>
+        <div class="historyLogo">HISTORY</div>
     </header>
+    <input type="text" class="title" id="title">
+    <div class="history"></div>
     <main>
         <div class="panel">
             <div class="codeSection">
